src/component/LandingPageV2/Introduction/style.css
.introductionContainer {
  margin: 0%;
  padding: 0%;
}

.shermancenter {
    /* position: absolute; */
    max-width: 100vw;
    height: 100vh;
    left: 0px;
    right: 0px;
    top: 0px;
    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url('../../../assets/images/landingpage/weare/landing.jpg');
    background-size: cover;
}

.wearetext {
  position: relative;
  width: 16.2vh;
  height: 6.46vh;
  left: 15.24vh;
  top: 8.19vh;

  font-family: "Space Mono";
  font-style: normal;
  font-weight: 700;
  font-size: 4.39vh;
  line-height: 10.46vh;
  text-transform: uppercase;
  color: #ffffff;
}

.wearetextmobile {
  position: relative;
  width: 16.2vh;
  height: 6.46vh;
  left: 1.24vh;
  top: 19vh;

  font-family: "Space Mono";
  font-style: normal;
  font-weight: 700;
  font-size: 2.79vh;
  line-height: 10.46vh;
  text-transform: uppercase;
  color: #ffffff;
}

.generatetext {
  /* generate */
  position: relative;
  width: 149.39vh;
  height: 45.12vh;
  left: 13.17vh;
  top: 12.19vh;

  font-family: "Space Mono";
  font-style: normal;
  font-weight: 700;
  font-size: 30.48vh;
  line-height: 25.12vh;
  text-transform: uppercase;

  color: #ffffff;
}

.generatetextmobile {
  /* generate */
  position: relative;
  width: 149.39vh;
  height: 45.12vh;
  top: 11vh;

  font-family: "Space Mono";
  font-style: normal;
  font-weight: 700;
  font-size: 8vh;
  line-height: 25.12vh;
  text-transform: uppercase;

  color: #ffffff;
}

.northeasternbest {
  /* generate */
  position: relative;
  height: 6.46vh;
  right: -18vh;
  top: -20vh;
  font-family: "Space Mono";
  font-style: normal;
  font-weight: 10;
  font-size: 1.79vh;
  line-height: 10.46vh;
  color: #ffffff;
}

.productdevelopment {
  /* generate */
  position: relative;
  height: 6.46vh;
  right: -18vh;
  top: -24vh;
  font-family: "Space Mono";
  font-style: normal;
  font-weight: 10;
  font-size: 1.79vh;
  line-height: 10.46vh;
  text-transform: lowercase;
  color: #ffbf00;
}

.studio {
  /* generate */
  position: relative;
  height: 6.46vh;
  right: -32vh;
  top: -28vh;
  font-family: "Space Mono";
  font-style: normal;
  font-weight: 10;
  font-size: 1.79vh;
  line-height: 10.46vh;
  text-transform: lowercase;
  color: white;
}

.scrollmobile {
  position: relative;
  height: 210vh;
  right: -19vh;
  top: 5vh;
  font-family: "Space Mono";
  font-style: normal;
  font-weight: 10;
  font-size: 1.79vh;
  line-height: 10.46vh;
  text-transform: lowercase;
  color: white;
  text-decoration: underline;
}

.comingsoontext {
  display: inline;
  position: relative;
  width: 110.39vh;
  height: 30.12vh;
  left: 1.17vh;
  top: 1.19vh;

  font-family: "Space Mono";
  font-style: normal;
  font-weight: 700;
  font-size: 10vh;
  line-height: 8.12vh;
  text-transform: uppercase;

  color: #ffffff;
  
}

.desktop {
  /* generate */
  display: inline;
  position: relative;
  width: 149.39vh;
  height: 45.12vh;
  left: 13.17vh;
  top: 12.19vh;

  font-family: "Space Mono";
  font-style: normal;
  font-weight: 700;
  font-size: 30.48vh;
  line-height: 45.12vh;
  text-transform: uppercase;

  color: #ffffff;
}

/* css to render appropriate intro on desktop vs. mobile by setting display size params
*/
@media only screen and (max-device-width: 650px) {
  .desktop {
    display: none;
  }
  .comingsoontext {
    display: inline;
  }
}

@media only screen and (min-device-width: 651px) {
  .desktop {
    display: inline;
  }
  .comingsoontext {
    display: none
  }
}

.scrolltext {
  /* scroll */
  position: absolute;
  width: 74px;
  height: 30px;
  left: 1340px;
  top: 792px;

  font-family: "Space Mono";
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 30px;
  /* identical to box height, or 150% */
  /* Black/White */
  color: #ffffff;
}

.scrollarrow {
  position: absolute;
  width: 5.11vh;
  height: 5.11vh;
  left: 160.28vh;
  top: 100.51vh;

  background-image: url("../../../assets/images/landingpage/weare/ArrowSideways.png");
  background-size: cover;
}

.whitebox {
  position: absolute;
  width: 90px;
  height: 90px;
  left: 1230px;
  top: 762px;

  background-image: url("../../../assets/images/landingpage/weare/WhiteBox.png");
  background-size: cover;
}

.scrollimg {
  width: 10.04vh;
  object-fit: contain;
  margin-bottom: -35vh;
}

.scroll {
  display: flex;
  flex-direction: row;
  float: right;
  padding-right: 2em;
}

.scrolltext {
  font-size: 20px;
  font-family: "Space Mono";
  font-weight: 400;
  color: #ffffff;
}

.intro-navbar {
  margin-left: 3%;
  padding-top: 2%;
}

